@@ -18,6 +18,8 @@
   *  - Changed over all device demos to use a clearer algorithm for the configuring of the application's endpoints
   *  - Added missing DataflashManager_CheckDataflashOperation() function to the MassStorageKeyboard demo, removed redundant
   *    SCSI_Codes.h file as these values are part of the MassStorage Class Driver
+  *  - Added compile time error to the AVRISP-MKII project when built for the U4 chips, as the default VTARGET detection ADC channel
+  *    does not exist on these chips (thanks to Marco)
   *
   *  <b>Fixed:</b>
   *  - Fixed USB_GetHIDReportItemInfo() function modifying the given report item's data when the report item does not exist
